--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
           <p>Status: ongoing</p>
           <p><a class="btn btn-default" href="lepaipai-designs/index.html" role="button">View details »</a></p>
        </div>
+        <div class="col-md-4">
+          <h2>IONICONS Adoption</h2>
+          <p>http://ionicons.com/</p>
+          <p><a class="btn btn-default" href="http://ionicons.com/" role="button">View details »</a></p>
+       </div>
       </div>
 
       <hr>
