--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
           <p><a class="btn btn-default" href="http://ionicons.com/" role="button">View details »</a></p>
        </div>
       </div>
+      <div class="row">
+        <div class="col-md-4">
+          <h2>Image resources          </h2>
+          <p><a class="btn btn-default" href="https://github.com/ninjaisun/lepaipai/tree/ph-pages/lepaipai-designs/assets" role="button">View details</a></p>
+        </div>
+      </div>
 
       <hr>
 
