--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Logo Design</h2>
-          <p>Status: pending</p>
-          <p><a class="btn btn-default" href="#" role="button">TBD</a></p>
+          <p>Status: ongoing</p>
+          <p><img src="logo.png" /></p>
         </div>
         <div class="col-md-4">
           <h2>APP UI Design</h2>
